update course plan

--- a/syllabus-1.html
+++ b/syllabus-1.html
@@ -139,7 +139,7 @@ img {
 <td align="left">Cole</td>
 </tr>
 <tr class="even">
-<td align="left">Thursday 2/25?</td>
+<td align="left">Thursday 2/25</td>
 <td align="left">Smoothing and splines</td>
 <td align="left">Brookhart</td>
 </tr>
