added survival html update

--- a/survival.html
+++ b/survival.html
@@ -442,7 +442,7 @@ run;</code></pre>
 </ul>
 <p>Variance for cumulative hazard:</p>
 <p><span class="math">\[
-  V\left(H^{KM}(t)\right) = \displaystyle\sum_{k:R_k $leq$ t} \frac{Y_k}{N_k (N_k - Y_k)}
+  V\left(H^{KM}(t)\right) = \displaystyle\sum_{k:R_k \leq t} \frac{Y_k}{N_k (N_k - Y_k)}
 \]</span></p>
 <p>Variance for survival function, <span class="math">\(S^{KM}(t)\)</span>:</p>
 <p><span class="math">\[
